# scry

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: client-04.toml
src/: cli.rs  config.rs  main.rs  output.rs
src/status/: agents.rs  mod.rs  monitor.rs  network.rs  remote.rs  server.rs
